--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,8 +42,10 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "tslint": "^5.20.1",
     "tslint-react-hooks": "^2.2.1",
     "typescript": "^3.7.5"
-  }
+  },
+  "homepage": "https://dehorser.github.io/bus-scheduler"
 }
