--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,6 +43,8 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react-app-rewired": "^2.1.5",
     "tslint": "^5.20.1",
     "tslint-react-hooks": "^2.2.1",
     "typescript": "^3.7.5"
